--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Redirect YouTube Homepage to Google",
   "version": "1.0",
-  "description": "Redirects https://www.youtube.com to Google (https://www.google.com).",
+  "description": "Distract to retract",
   "permissions": ["webNavigation", "webNavigation.onErrorOccurred"],
   "content_scripts": [
     {
